--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-tailwind-boiler-project",
+  "name": "pulse-point-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
