--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "14.0.4",
     "prop-types": "^15.8.1",
     "react": "^18",
