--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "dotenv": "^16.4.1",
+    "firebase": "^10.8.0",
     "next": "14.0.4",
     "prop-types": "^15.8.1",
     "react": "^18",
