--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.1",
     "firebase": "^10.8.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
